--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ on:
   push: 
     branches: 
       - main
+    paths:
+      - ./CHANGELOG
     
 jobs:
   build:
@@ -25,7 +27,37 @@ jobs:
         with:
           VARIANT: ${{ matrix.variant }}
       - uses: actions/upload-artifact@v4
-        if: github.event_name == 'pull_request'
         with:
           name: ${{ steps.build-image.outputs.IMAGE_NAME }}
           path: ./src/workspace-${{ matrix.variant }}/${{ steps.build-image.outputs.IMAGE_NAME }}.zip
+
+
+  release:
+    runs-on: ubuntu-latest
+    if: github.event != 'pull_request'
+    needs:
+      - build
+    permissions:
+      contents: write
+      repository-projects: read
+    steps:
+      - uses: actions/download-artifact@v4
+        id: download
+      - name: Request GitHub token
+        id: get_workflow_token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ vars.OTA_RELEASE_APP_ID }}
+          private-key: ${{ secrets.OTA_RELEASE_APP_PRIVATE_KEY }}
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.3.1
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        if: github.event_name != 'pull_request'
+        with:
+          repo_token: ${{ steps.get_workflow_token.outputs.token }}
+          file: ${{ steps.download.outputs.download-path }}/*
+          tag: refs/tags/${{ steps.package-version.outputs.current-version }}
+          overwrite: true
+          file_glob: true
