--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,10 @@ on:
       - main
     paths:
       - ./CHANGELOG
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.event == 'pull_request' }} // non PR workflows should block each other
     
 jobs:
   build:
